--- a/pom.xml
+++ b/pom.xml
@@ -251,6 +251,13 @@
                             <failurePriority>2</failurePriority>
                         </configuration>
                     </plugin>
+		     
+		    <plugin>
+      		       <groupId>org.sonarsource.scanner.maven</groupId>
+                       <artifactId>sonar-maven-plugin</artifactId>
+                       <version>3.6.0.1398</version>
+                    </plugin>
+
 
                     <!-- FINDBUGS -->
                     <plugin>
